yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restapi-service
  namespace: backendapi  
spec:
  selector:
    app: flask-app-selmat  
  ports:
    - protocol: TCP     
      port: 80      
      targetPort: 5000
      nodePort: 30001 
  type: NodePort
