yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
  namespace: backendapi
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /healthcheck
        pathType: Prefix
        backend:
          service:
            name: restapi-service
            port:
              number: 80
